# bathyu

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bathyu/: __init__.py  main.py  rastercalc.py  utils.py  windowops.py
bathyu/io/: export.py  nlho_grids_io.py  opendap.py  xyz.py
bathyu/nlho/: attributes.py  metadata.json  nlho.py  run_ascii_tiles_to_nc.py
examples/: compute_slopes.py  get_nlho.py  make_vakloding_mosaic.py  nlho_from_opendap.py  reconstruct_nlho_tiles.py
tests/: test_opendap.py  test_projections.py
